--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ https://www.tooplate.com/view/2120-ben-resume
           </ul>
 
           <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
-            <a href="#" class="custom-btn btn" download>Download Company Profile</a>
+            <a href="https://drive.google.com/file/d/10ftTiNu6yNlmNy8AiamDQV7OCesXTbMx/view?usp=sharing" class="custom-btn btn" download>Download Company Profile</a>
           </div>
         </div>
       </div>
