Menambahkan Project card

--- a/index.html
+++ b/index.html
@@ -316,6 +316,57 @@ https://www.tooplate.com/view/2120-ben-resume
       </div>
     </section>
 
+    <!-- Project -->    
+    <section id="projects" class="projects section-padding">
+      <div class="container">
+        <h2 class="text-center mb-5">Projects yang kami buat</h2>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6 col-12 mb-4">
+            <div class="card project-card">
+              <img src="images/project/e-mading.png" class="card-img-top" alt="Project 1">
+              <div class="card-body">
+                <h5 class="card-title">Website E-Mading</h5>
+                <p class="card-text">Website E-mading merupakan website untuk menambahkan artikel yang berisi gambar dan juga isi dari artikel yang dapat diakses oleh pengguna.<br><br>Website ini juga memiliki dashboard untuk admin mengelola isi dari artikel. Website ini dirancang menggunakan bahasa pemrograman PHP dan terintegrasi dengan database MySQL.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-12 mb-4">
+            <div class="card project-card">
+              <img src="images/project/mindease.png" class="card-img-top" alt="Project 2">
+              <div class="card-body">
+                <h5 class="card-title">Aplikasi Android MindEase</h5>
+                <p class="card-text">MindEase adalah sebuah aplikasi yang dirancang untuk memberikan dukungan dan perawatan kesehatan mental. Bertujuan untuk membantu pengguna mengelola stres, kecemasan, depresi, dan berbagai isu kesehatan mental lainnya melalui berbagai fitur dan layanan yang ada di aplikasi. <br><br>Aplikasi ini dikembangkan pada Android Studio dengan menggunakan bahasa pemrograman Flutter yang terintegrasi dengan REST API golang</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-12 mb-4">
+            <div class="card project-card">
+              <img src="images/project/bisaternak.jpg" class="card-img-top" alt="Project 3">
+              <div class="card-body">
+                <h5 class="card-title">UI/UX Bisaternak</h5>
+                <p class="card-text">Bisa Ternak merupakan apliasi yang memungkinkan para peternak mengelola ternak mereka dengan lebih baik. <br><br>Desain UI/UX ini dibuat dengan aplikasi FIGMA dan Adobe Photoshop</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-12 mb-4">
+            <div class="card project-card">
+              <img src="images/project/rest-api.png" class="card-img-top" alt="Project 4">
+              <div class="card-body">
+                <h5 class="card-title">REST API MindEase</h5>
+                <p class="card-text">REST API ini digunakan untuk aplikasi mobile dan memiliki total 110 endpoint atau fitur untuk roles Dokter dan juga User. REST API juga terintegrasi dengan openAI untuk fitur chatbot, Midtrans untuk sistem pembayaran, dan Cloudinary sebagai penyimpanan media cloud. <br><br>REST API dikembangkan menggunakan bahasa pemrograman GOLANG dengan library/framework pendukung lainnya.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
     <!-- FAQ -->
     <section class="faq section-padding" id="layanan">
       <div class="container">
@@ -628,3 +679,4 @@ https://www.tooplate.com/view/2120-ben-resume
     <script src="js/custom.js"></script>
   </body>
 </html>
+
